--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
                     <img src="imgs/first.webp" alt="">
                     <img src="imgs/second.avif" alt="">
                     <img src="imgs/third.jpg" alt="">
-                    <img src="imgs/fourth.jpg" alt="">
+                    <img src="imgs/fourth.png" alt="">
                     <img src="imgs/sixth.jpg" alt="">
                 </div>
             </div>
